# jailgun

./: .env.example  .env.live-7tab.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
agent/: JANKURAI_STANDARD.md  generated-zones.toml  jankurai-badge.json  owner-map.json  proof-lanes.toml  repo-score.json  repo-score.md  standard-version.toml  test-map.json  tool-adoption.toml
apps/browser-adapter/: package.json
apps/chrome-bridge/: package.json
apps/dashboard/: package.json  vitest.config.ts
config/: jailgun.example.toml
contracts/: AGENTS.md
contracts/json-schema/: event.schema.json
crates/jailgun-cli/: Cargo.toml
crates/jailgun-cli/src/: cli.rs  commands.rs  main.rs
crates/jailgun-core/: Cargo.toml
crates/jailgun-deploy/: Cargo.toml
crates/jailgun-notify/: Cargo.toml
crates/jailgun-notify/src/: envelope.rs  lib.rs  notice.rs  subscriber.rs  writer.rs
crates/jailgun-orchestrator/: Cargo.toml
crates/jailgun-server/: Cargo.toml
crates/jailgun-server/src/: lib.rs
db/: AGENTS.md  README.md
docs/: architecture.md  dual-browser-runbook.md  jmcp-integration.md  release.md  testing.md
docs/decisions/: 001-run-history-persistence.md
ops/ci/: coverage.sh  e2e-fake-chatgpt.sh  e2e.sh  jankurai.sh  lib.sh  quality-gates.sh  rust.sh  scan.sh  security.sh
ops/git-hooks/: post-commit
prompts/examples/: jekko-super-dummy.txt
prompts/templates/: README.md  harden-repo.txt
scripts/: ci-local.sh  cleanup-profile-chromes.sh  demo-dual-browser-loops.sh  demo-real-dual-browser.sh  generate-contracts.mjs  login-profile-interactive.sh  monitor-live-run.mjs  run-live-2profile.sh  run-live-7tab.sh  start-fake-chatgpt-with-cdp.mjs
tools/: security-lane.sh
(+72 files in other folders)
