[package]
name = "jailgun-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jailgun"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
jailgun-core = { path = "../jailgun-core" }
jailgun-deploy = { path = "../jailgun-deploy" }
jailgun-notify = { path = "../jailgun-notify" }
jailgun-orchestrator = { path = "../jailgun-orchestrator" }
jailgun-server = { path = "../jailgun-server" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
