[package]
name = "jailgun-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
futures.workspace = true
jailgun-core = { path = "../jailgun-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

